--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body{
+  margin: 0;
+  background-color: #D9D9D9;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+footer{
+  width: 95%;
+  background-color: #FE590B;
+  z-index: 1;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+div{
+  border-radius: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.overallBackground{
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.card {
-  padding: 2em;
+nav{
+  width: 95%;
+  background-color: #FE590B;
+  height: 7vh;
+  z-index: 2;
 }
 
-.read-the-docs {
-  color: #888;
+nav ul li{
+  list-style-type: none;
+}
+
+.logoClass{
+  width: 95%;
+  background-color: black;
+  height: 90vh;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  top:0;
+  z-index: 0;
+}
+
+.bodySectionForMain{
+  background-color: white;
+  width:95%;
+  padding: 20px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.checking{
+  background-color: grey;
 }
