--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -1,18 +1,20 @@
 body{
   margin: 0;
-  background-color: #D9D9D9;
+  background-color: #FFEBD6;
   margin-top: 20px;
   margin-bottom: 20px;
 }
 
 footer{
-  width: 95%;
+  width: 90%;
   background-color: #FE590B;
   z-index: 1;
 }
 
-div{
-  border-radius: 10px;
+h1{
+  position: sticky;
+  top: 20px;
+  background-color: #FFEBD6;
 }
 
 .overallBackground{
@@ -23,7 +25,7 @@ div{
 }
 
 nav{
-  width: 95%;
+  width: 90%;
   background-color: #FE590B;
   height: 7vh;
   z-index: 2;
@@ -31,10 +33,11 @@ nav{
 
 nav ul li{
   list-style-type: none;
+  display: inline-block;
 }
 
 .logoClass{
-  width: 95%;
+  width: 90%;
   background-color: black;
   height: 90vh;
   color: white;
@@ -48,7 +51,7 @@ nav ul li{
 
 .bodySectionForMain{
   background-color: white;
-  width:95%;
+  width:90%;
   padding: 20px;
   box-sizing: border-box;
   display: flex;
@@ -58,4 +61,64 @@ nav ul li{
 
 .checking{
   background-color: grey;
+}
+
+/* About page */
+
+.block {
+  display: flex;
+  width: 90%;
+  align-items: center;
+  background-color: white;
+  justify-content: space-evenly;
+  height: 70vh;
+  flex-direction: row;
+  margin-bottom: 20px;
+}
+
+.block img,
+.block iframe {
+  width: 200px;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.block-reverse {
+  background-color: #FA8F5D;
+  display: flex;
+  width: 90%;
+  align-items: center;
+  justify-content: space-evenly;
+  height: 70vh;
+  flex-direction: row-reverse;
+  margin-bottom: 20px;
+}
+
+/* Member list */
+
+.profileDiv{
+  background-color: #FA8F5D;
+  display: flex;
+  width: 45%;
+  height: 150px;
+  margin: 20px;
+}
+
+.profileDiv img{
+  margin: 20px;
+}
+
+/* Challenges */
+
+.nameSpce{
+  background-color: white;
+  margin-bottom: 20px;
+  width: 90%;
+  height: 500px;
+}
+
+.h1InChallenges h1{
+  position: relative;
+  margin: 20px;
 }
