--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -5,10 +5,34 @@ body{
   margin-bottom: 20px;
 }
 
+h3{
+  font-size: 25px;
+  margin-bottom: 5px;
+  background-color: #FFEBD6;
+  display: inline-box;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: fit-content;
+}
+
 footer{
   width: 90%;
   background-color: #FE590B;
   z-index: 1;
+}
+
+nav p{
+  display: inline;
+  margin-right: 15px;
+  margin-left: 15px;
+  font-size: 20px;
+}
+
+.allIcons{
+  margin-left: 5%;
+  display: flex;
+  justify-content: space-evenly;
+  width: 10%;
 }
 
 h1{
@@ -28,18 +52,36 @@ nav{
   width: 90%;
   background-color: #FE590B;
   height: 7vh;
+  display: flex;
+  align-items: center;
   z-index: 2;
 }
 
 nav ul li{
   list-style-type: none;
   display: inline-block;
+  margin-left: 15px;
+}
+
+nav ul li a{
+  text-decoration: none;
+  color: black;
+}
+
+nav ul li a:hover{
+  text-decoration: none;
+  color: #FFEBD6;
+}
+
+nav ul{
+  display: inline-block;
+  padding: 0;
 }
 
 .logoClass{
   width: 90%;
   background-color: black;
-  height: 90vh;
+  height: 80vh;
   color: white;
   display: flex;
   justify-content: center;
@@ -47,6 +89,13 @@ nav ul li{
   position: sticky;
   top:0;
   z-index: 0;
+}
+
+.horizontalLine{
+  background-color: white;
+  width: 5px;
+  height: 90%;
+  margin-left: 40%;
 }
 
 .bodySectionForMain{
@@ -100,14 +149,47 @@ nav ul li{
 .profileDiv{
   background-color: #FA8F5D;
   display: flex;
-  width: 45%;
-  height: 150px;
+  width: 650px;
+  height: auto;
   margin: 20px;
 }
 
-.profileDiv img{
-  margin: 20px;
+.role{
+  margin-top: 0;
 }
+
+.profileDiv img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.pfp{
+  margin: 20px;
+  width: 190px;
+  height: 150px;
+  /* border-radius: 50%; */
+  overflow: hidden;
+}
+
+.pfpAugust{
+  margin: 20px;
+  width: 470px;
+  height: 150px;
+  /* border-radius: 50%; */
+  overflow: hidden; 
+}
+
+.pfpTree{
+  margin: 20px;
+  width: 350px;
+  height: 150px;
+  /* border-radius: 50%; */
+  overflow: hidden; 
+}
+
+
 
 /* Challenges */
 
@@ -115,7 +197,8 @@ nav ul li{
   background-color: white;
   margin-bottom: 20px;
   width: 90%;
-  height: 500px;
+  height: auto;
+  min-height: 200px;
 }
 
 .h1InChallenges h1{
