footer fix, vercel temporary fix

--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -19,6 +19,9 @@ footer{
   width: 90%;
   background-color: #FE590B;
   z-index: 1;
+  color: white;
+  display: flex;
+  justify-content: space-evenly;
 }
 
 nav p{
