--- a/my-react-app/src/App.css
+++ b/my-react-app/src/App.css
@@ -148,7 +148,8 @@ nav ul{
 
 .glitchContainer{
   position: absolute;
-  left: 255px;
+  left: 20%;
+  /* 255px; */
   /* left: 0; */
   top: 100px;
   width: 60%;
@@ -158,7 +159,8 @@ nav ul{
 
 #canvasDisplay{
   position: absolute;
-  left: 255px;
+  left: 20%;
+  /* 255px; */
   /* left: 0; */
   top: 160px;
   display: inline;
@@ -286,4 +288,171 @@ nav ul{
 .h1InChallenges h1{
   position: relative;
   margin: 20px;
+}
+
+
+@media (max-width: 1000px){
+  .logoClass {
+    width: 90%;
+    background-color: black;
+    height: 80vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 0;
+  }
+
+  .logoClass h1 {
+    background-color: transparent;
+    font-size: 100px;
+    margin-bottom: 0;
+    /* position: absolute; */
+    color: white;
+    text-align: unset;
+    width: fit-content;
+    padding-left: 210px;
+  }
+
+  .logoClass p {
+    margin-top: 0;
+    /* position: absolute; */
+    padding-left: 215px;
+    color: white;
+  }
+
+  .glitchContainer {
+    position: absolute;
+    left: 10%;
+    /* 255px; */
+    /* left: 0; */
+    top: 150px;
+    width: 75%;
+    height: 45%;
+    cursor: none;
+  }
+
+  #canvasDisplay {
+    position: absolute;
+    left: 10%;
+    /* 255px; */
+    /* left: 0; */
+    top: 160px;
+    display: inline;
+    height: 200px;
+  }
+
+}
+
+
+@media (max-width: 700px){
+  .logoClass {
+    width: 90%;
+    background-color: black;
+    height: 80vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 0;
+  }
+
+  .logoClass h1 {
+    background-color: transparent;
+    font-size: 70px;
+    margin-bottom: 0;
+    /* position: absolute; */
+    color: white;
+    text-align: unset;
+    width: fit-content;
+    padding-left: 200px;
+  }
+
+  .logoClass p {
+    margin-top: 0;
+    /* position: absolute; */
+    padding-left: 200px;
+    color: white;
+  }
+
+  .glitchContainer {
+    position: absolute;
+    left: 4%;
+    /* 255px; */
+    /* left: 0; */
+    top: 155px;
+    width: 75%;
+    height: 45%;
+    cursor: none;
+  }
+
+  #canvasDisplay {
+    position: absolute;
+    left: 5%;
+    /* 255px; */
+    /* left: 0; */
+    top: 160px;
+    display: inline;
+    height: 150px;
+  }
+
+}
+
+@media (max-width: 600px){
+  .logoClass {
+    width: 90%;
+    background-color: black;
+    height: 80vh;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 0;
+  }
+
+  .logoClass h1 {
+    background-color: transparent;
+    font-size: 50px;
+    margin-bottom: 0;
+    /* position: absolute; */
+    color: white;
+    text-align: unset;
+    width: fit-content;
+    padding-left: 200px;
+  }
+
+  .logoClass p {
+    margin-top: 0;
+    /* position: absolute; */
+    padding-left: 200px;
+    color: white;
+  }
+
+  .glitchContainer {
+    position: absolute;
+    left: -15%;
+    /* 255px; */
+    /* left: 0; */
+    top: 250px;
+    width: 75%;
+    height: 45%;
+    cursor: none;
+  }
+
+  #canvasDisplay {
+    position: absolute;
+    left: -15%;
+    /* 255px; */
+    /* left: 0; */
+    top: 250px;
+    display: inline;
+    height: 150px;
+  }
+
 }
