--- a/wangara/src/App.css
+++ b/wangara/src/App.css
@@ -90,7 +90,7 @@ h1{
 nav{
   width: 90%;
   background-color: var(--navnfoot);
-  height: 7vh;
+  height: 8vh;
   display: flex;
   align-items: center;
   padding: 0 5px 0 5px;
@@ -102,6 +102,7 @@ nav ul li{
   list-style-type: none;
   display: inline-block;
   margin-left: 15px;
+  font-size: 18px;
 }
 
 nav ul li a{
