--- a/wangara/src/App.css
+++ b/wangara/src/App.css
@@ -59,8 +59,9 @@ footer{
 
 nav p{
   display: inline;
-  font-size: 24px;
+  font-size: 27px;
   margin-left: 10px;
+  margin-right: 10px;
 }
 
 .allIcons{
