--- a/wangara/src/App.css
+++ b/wangara/src/App.css
@@ -60,8 +60,7 @@ footer{
 nav p{
   display: inline;
   font-size: 27px;
-  margin-left: 10px;
-  margin-right: 10px;
+  margin: 0 15px;
 }
 
 .allIcons{
