--- a/wangara/src/App.css
+++ b/wangara/src/App.css
@@ -203,13 +203,15 @@ nav ul{
 .block {
   display: flex;
   width: 90%;
-  align-items: center;
+  align-items: left;
   background-color: var(--boxRev);
-  justify-content: space-evenly;
+  /* justify-content: space-evenly; */
   color: var(--ovrText);
-  height: 70vh;
-  flex-direction: row;
+  height: fit-content;
+  /* flex-direction: row; */
   margin-bottom: 20px;
+  padding: 20px;
+  box-sizing: border-box;
 }
 
 .block img,
@@ -224,12 +226,14 @@ nav ul{
   background-color: var(--boxes);
   display: flex;
   width: 90%;
-  align-items: center;
+  align-items: left;
   color: var(--ovrText);
-  justify-content: space-evenly;
-  height: 70vh;
-  flex-direction: row-reverse;
+  /* justify-content: space-evenly; */
+  height: fit-content;
+  padding: 20px;
+  /* flex-direction: row-reverse; */
   margin-bottom: 20px;
+  box-sizing: border-box;
 }
 
 /* Member list */
@@ -277,24 +281,35 @@ nav ul{
   overflow: hidden;
 }
 
+.pfpMar{
+  margin: 20px;
+  width: 165px;
+  height: 150px;
+  overflow: hidden;
+}
+
 .desc{
   margin-bottom: 0;
   font-style: italic;
   font-weight: bold;
   width: fit-content;
-  background-color:aliceblue;
   color: black;
 }
 
 .pfpAugust{
   margin: 20px;
-  width: 470px;
+  width: 570px;
   height: 150px;
   /* border-radius: 50%; */
   overflow: hidden; 
 }
 
-
+.pfpJane{
+  margin: 20px;
+  width: 200px;
+  height: 150px;
+  overflow: hidden;
+}
 
 /* Challenges */
 
