--- a/wangara/src/App.css
+++ b/wangara/src/App.css
@@ -55,7 +55,7 @@ footer{
   display: flex;
   align-items: center;
   flex-direction: column;
-  padding: 20px 25px 0 25px;
+  padding: 20px 25px 20px 25px;
 }
 
 footer p{
